nuevo enlace a proyecto added

--- a/projects/index.html
+++ b/projects/index.html
@@ -33,7 +33,9 @@
     <section class="projects">
       <div class="travelly">
         <h2>Travelly</h2>
-        <img src="../img/travelly.jpg" alt="travelly-project" />
+        <a target="_blank" href="https://stupendous-maamoul-a12a46.netlify.app/">
+        <img  src="../img/travelly.jpg" alt="travelly-project" />
+      </a>
       </div>
       <div class="travelly">
         <h2>Elena Joy</h2>
