--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <section class="intro">
       <div class="intro-text">
-        <h2>René Kermitt</h2>
+        <h2>René Valenzuela</h2>
         <h3>
           Junior Web <br />
           Developer
@@ -259,7 +259,7 @@
       </div>
     </section>
     <footer>
-      <h4>René Valenzuela  &copy; 2022</h4>
+      <h4>René Valenzuela  &copy; 2023</h4>
       <ul>
         <li>
           <a target="_blank" href="https://twitter.com/ReneKermitt"
